<resources>
    <string name="app_name">GV Partner</string>
    <string name="head_name">Registration Now</string>
    <string name="first_name">Full Name</string>
    <string name="name">Rahul</string>
    <string name="mobileno">Mobile No.</string>
    <string name="mobnumber">880222****</string>
    <string name="email_address">E-mail Address</string>
    <string name="examplegmail">Example@gmail.com</string>
    <string name="gst_no">GST No.</string>
    <string name="refer_code">Referral Code (Optional)</string>
    <string name="alreadyhaveanaccount">Already have an account? </string>
    <string name="invite_your_friend_and_family_heading">Invite &amp; Earn</string>
    <string name="invite_your_friend_and_family">Invite &amp; Earn! 🎉</string>
    <string name="and_earn_cashback_on_your" translatable="false">Refer your friends and family and get rewards up to ₹500! 💰✨</string>
    <string name="startridecode">Please enter start ride code </string>
    <string name="gstnum">22AAAAA0000A125</string>
    <string name="vehicle_number">Vehicle Number</string>
    <string name="vehicle_registration_no">Vehicle Registration No.</string>
    <string name="advance_amount">Advance Amount \n(10% of Whole Amount)</string>
    <string name="reg_no">UP 3D 1234</string>
    <string name="type_of_vehicles">Type of vehicles</string>
    <string name="total_driver">Total Driver</string>
    <string name="driver_name">Driver Name</string>
    <string name="driver_license_number">Driver License Number</string>
    <string name="addmore">ADD MORE</string>
    <string name="submit">Submit</string>
    <string name="update">Update</string>
    <string name="Proceed">Proceed</string>
    <string name="userid">User Id</string>
    <string name="headpassword">Password</string>
    <string name="password">**********</string>
    <string name="forgotpassword">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="or">Or</string>
    <string name="head_accountverification">Account Verification</string>
    <string name="dummy_text">Dummy Text</string>
    <string name="entermobileno">Enter Mobile Number</string>
    <string name="pleaseentermobile">Please enter your mobile number.</string>
    <string name="next">Next</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="otp">OTP</string>
    <string name="createpassword">Create Password</string>
    <string name="r_password">Password</string>
    <string name="r_confirm_password">Confirm Password</string>
    <string name="done">Done</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="make_sure_you_have_an_active_data_connection">Make sure you have an active data connection</string>
    <string name="connection_timeout">Connection Timeout</string>
    <string name="oops_somethings_went_wrong">Oops! Somethings went wrong</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="passangervehicle">Passenger Vehicle</string>
    <string name="loadervehicle">Loader Vehicle</string>
    <string name="triplst">Trip List</string>
    <string name="selectservicetype">Select service type</string>
    <string name="createbusinesscard">Create Business Card</string>
    <string name="addtrip">Add Trip</string>
    <string name="viewtrip">View Trip</string>
    <string name="tripbook">Trip List</string>
    <string name="truckdocument">Truck Document</string>
    <string name="adddriver">Add Driver</string>
    <string name="companyname">Company Name</string>
    <string name="fullname">Full Name</string>
    <string name="phoneno">Phone No.</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="bsltransport">BSL Transport</string>
    <string name="pramod">Pramod Gupta</string>
    <string name="hintphn">+91 123456789</string>
    <string name="hintaddress">Type your address here</string>
    <string name="downloadpdf">Download as a PDF</string>
    <string name="addDrivingLicence"> + Add Driving License</string>
    <string name="drivername">Driver Name</string>
    <string name="drivingexperience">Driving Experience</string>
    <string name="licensenumber">HR-7777******</string>
    <string name="username">User Name</string>
    <string name="usernamehint">user@3456</string>
    <string name="driving_license_number">Driving License Number</string>
    <string name="years5">5 years</string>
    <string name="phonenumber">Phone Number</string>
    <string name="addthisdriver">ADD THIS DRIVER</string>
    <string name="updatedriver">Update</string>
    <string name="ramesh">Ramesh</string>
    <string name="licno">Lic. No.: HR-0619850034761</string>
    <string name="myprofile">My Profile</string>
    <string name="transactionreport">Transaction Report</string>
    <string name="invoicelist">Invoice List</string>
    <string name="mywallet">My Wallet</string>
    <string name="refer">Refer And Earn</string>
    <string name="loadertriphistory">Loader Trip History</string>
    <string name="passengertriphistory">Passenger Trip History</string>
    <string name="subscriptionplans">Subscription Plans</string>
    <string name="dieselprice">Petrol/Diesel Price</string>
    <string name="ratingreviews">Rating &amp; Reviews</string>
    <string name="notification">Notification</string>
    <string name="Upload">Upload Signature, Bilti, POD</string>
    <string name="terms_and_condition">Terms And Conditions</string>
    <string name="settings">Settings</string>
    <string name="contactus">Contact Us</string>
    <string name="aboutus">About Us</string>
    <string name="rateapplication">Rate Application</string>

    <string name="privacypolicy">Privacy Policy</string>
    <string name="logout">Logout</string>

    <!--    <string name="api_key">AIzaSyD5gY5yoLsLO7lQZxze7nJL_dijCiaNnAA</string>-->
    <!--    <string name="api_key">AIzaSyDHMu3z-K0LtuLnDLK2UoUdhejZtSxXGoA</string>-->
    <string name="api_key">AIzaSyCZ8xV_LZJXXyFncpaMvdPBFMtKC_LSe3g</string>
    <string name="triptask">Trip Task</string>
    <string name="officeshifting">Office Shifting</string>
    <string name="enterloadcarrying">Enter Load Carrying (in Tons)</string>
    <string name="ton5">5 Ton</string>
    <string name="from">From</string>
    <string name="gurugram">Gurugram</string>
    <string name="to">To</string>
    <string name="noida">Noida</string>
    <string name="vehiclename">Vehicle Name</string>
    <string name="vehicletype">Vehicle Type</string>
    <string name="assigneddriver">Driver Assigned</string>
    <string name="tatarigidtruck">Tata Rigid Truck</string>
    <string name="vehiclenumber">Vehicle Number</string>
    <string name="up5c4589">UP 5C 4589</string>
    <string name="assigndriver">Assign Driver</string>
    <string name="selectdate">Select Date</string>
    <string name="selecttime">Select Time</string>
    <string name="datehint">30-May-2022</string>
    <string name="timehint">11:30 AM</string>
    <string name="totalkilometers">Total Kilometers</string>
    <string name="hintkilom">350</string>
    <string name="price">Price</string>
    <string name="pricehint">Rs. 5,000</string>
    <string name="addthistrip">Add This Trip</string>

    <string name="addtruckdoc">Add Vehicle Documents</string>
    <string name="edittruckdoc">Edit Vehical Documents</string>
    <string name="specification">Specification</string>
    <string name="truckname">Vehical Name</string>
    <string name="vehicalnumber">Vehical Number</string>
    <string name="hinttataintra">Tata Intra v30</string>
    <string name="hintnumber">DL 1PC 2547</string>
    <string name="yearofmodel">Year of Model</string>
    <string name="vehicleid">Vehical</string>
    <string name="hint2015">2015</string>
    <string name="trucknumber">Truck Number</string>
    <string name="capacity">Capacity</string>
    <string name="color">Color</string>
    <string name="silvergray">Silver Gray</string>
    <string name="uploadtruckphoto">Upload Your Vehicle Photo</string>
    <string name="uploaddoc">Upload Documents</string>
    <string name="rcbook">Rc Book</string>
    <string name="rcbookpdf">Rc-book</string>
    <string name="insurancedoc">Insurance Document</string>
    <string name="insurancedocpdf">Insurance-Document</string>
    <string name="pollutiondoc">Pollution Document</string>
    <string name="pollutiondocpdf">Pollution-Document</string>
    <string name="approvalwait">Wait for approval!</string>
    <string name="approvalwaittext">Please wait for approval from admin.</string>

    <string name="upcomingbookings">Upcoming Bookings</string>
    <string name="hint_truckname">Tata 407</string>
    <string name="hint_ton">2.5 Ton</string>
    <string name="hint_date">30 May 2022</string>
    <string name="hint_time">01:30 PM</string>
    <string name="hint_start">Sec. 15 Noida</string>
    <string name="hint_stop">Gurugram sector 30</string>
    <string name="hint_distance">41.5 Km</string>
    <string name="hint_bookingid">Booking id: #1234</string>
    <string name="loremdummytext">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>


    <string name="passenger_vehicle">Passenger Vehicle</string>
    <string name="role">Role</string>
    <string name="addPassengerVehicle">Add Passenger Vehicle</string>
    <string name="vehiclenname">Vehicle Name</string>
    <string name="rcphoto">Rc Photo</string>
    <string name="fitnesspapers">Vehicle Fitness Papers</string>
    <string name="rto_doc">RTO Document</string>
    <string name="drivers">Drivers</string>
    <string name="freightamount">Final Amount</string>
    <string name="rameshemail">ramesh@gmail.com</string>


    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="email_id">Email id</string>
    <string name="are_you_sure_you_want_to_delete_this_driver">Are you sure you want to delete this driver ?</string>
    <string name="bank_holder_s_name">Bank holder\'s name</string>
    <string name="add_bank_account">Add bank account</string>
    <string name="upload_driving_license">Upload Driving license</string>
    <string name="cancellation_amp_refund_policy"><![CDATA[Cancellation & Refund Policy]]></string>

    <string-array name="typeofservice">
        <item>Individual</item>
        <item>Vender</item>
    </string-array>
    <string-array name="time_slots">
        <item>Select Time Slots</item>
        <item>00:00 to 04:00</item>
        <item>04:00 to 08:00</item>
        <item>08:00 to 12:00</item>
        <item>12:00 to 16:00</item>
        <item>16:00 to 20:00</item>
        <item>20:00 to 00:00</item>
    </string-array>

</resources>