<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:paddingTop="@dimen/_50sdp"
        tools:context=".ui.activity.LoginActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:isScrollContainer="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:src="@drawable/transportlogo"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:text="Login Now"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_25sdp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/textView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_16sdp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:layout_gravity="center"
                        android:fontFamily="@font/roboto_medium"
                        android:gravity="start"
                        android:text="@string/email"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_10sdp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edt_round_corner"
                        android:gravity="center">

                        <EditText
                            android:id="@+id/edtEmailLogin"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_40sdp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:background="@android:color/transparent"
                            android:fontFamily="@font/roboto_medium"
                            android:gravity="center_vertical"
                            android:hint="@string/examplegmail"
                            android:inputType="textEmailAddress"
                            android:imeOptions="actionNext"
                            android:singleLine="true"
                            app:hintAnimationEnabled="false"
                            app:hintEnabled="false" />

                    </LinearLayout>


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_16sdp"
                        android:fontFamily="@font/roboto_medium"
                        android:gravity="start"
                        android:text="@string/headpassword"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_10sdp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edt_round_corner"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/edtPassword"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_40sdp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:layout_marginEnd="@dimen/_10sdp"
                            android:layout_weight="1"
                            android:background="@android:color/transparent"
                            android:fontFamily="@font/roboto_medium"
                            android:gravity="center_vertical"
                            android:hint="@string/password"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:singleLine="true"
                            app:hintAnimationEnabled="false"
                            app:hintEnabled="false" />

                        <LinearLayout
                            android:id="@+id/lytVisiblePass"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="0.3"
                            android:background="@android:color/transparent"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/ivVisiblePass"
                                android:layout_width="13dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_marginEnd="@dimen/_16sdp"
                                android:src="@drawable/password_hide" />
                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:gravity="end">

                        <TextView
                            android:id="@+id/tvForgotPass"
                            android:layout_width="wrap_content"
                            android:layout_height="20dp"
                            android:layout_gravity="end"
                            android:layout_marginStart="10dp"
                            android:layout_weight="1"
                            android:fontFamily="@font/roboto_medium"
                            android:gravity="end"
                            android:text="@string/forgotpassword"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_10sdp" />

                    </LinearLayout>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_login"
                        android:layout_width="@dimen/_200sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_16sdp"
                        android:layout_marginTop="@dimen/_16sdp"
                        android:layout_marginEnd="@dimen/_16sdp"
                        android:background="@drawable/edt_round_corner_yellow"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/login"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_14sdp" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_signup"
                        android:layout_width="@dimen/_200sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_16sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_16sdp"
                        android:background="@drawable/edt_round_corner_yellow"
                        android:backgroundTint="@color/black"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/signup"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_14sdp" />


                </LinearLayout>




                    </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</layout>