<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/_1sdp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:background="@color/white">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:padding="@dimen/_2sdp"
                android:src="@drawable/backbutton" />



        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:isScrollContainer="false">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_100sdp"
                android:layout_marginRight="@dimen/_16sdp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="90dp"
                    android:src="@drawable/transportlogo" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/head_accountverification"
                    android:textColor="@color/black"
                    android:textSize="25dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/cardView2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center"
                    android:text="@string/pleaseentermobile"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/_10sdp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_16sdp"
                    android:orientation="vertical">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:background="@drawable/edt_round_corner"

                        android:gravity="center">

                        <EditText
                            android:id="@+id/et_mobile"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_40sdp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:layout_marginEnd="@dimen/_10sdp"
                            android:background="@android:color/transparent"
                            android:fontFamily="@font/roboto_medium"
                            android:gravity="center_vertical"
                            android:hint="@string/entermobileno"
                            android:imeOptions="actionNext"
                            android:inputType="number"
                            android:maxLength="10"
                            android:singleLine="true"
                            android:textSize="@dimen/_12sdp"
                            app:hintAnimationEnabled="false"
                            app:hintEnabled="false"

                            />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:layout_marginBottom="@dimen/_40sdp"
                        android:background="@drawable/edt_round_corner_yellow"
                        android:gravity="center"

                        android:orientation="horizontal">


                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btn_next"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_30sdp"
                            android:layout_gravity="center"
                            android:background="@drawable/edt_round_corner_yellow"
                            android:fontFamily="@font/roboto_medium"
                            android:text="@string/next"
                            android:textAllCaps="false"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_14sdp" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>

</layout>


















